  any set of values in the limits of any aesthetic.

New features (minor)

* aesthetics: when _setting_ an aesthetic, you may only set it to a single 
  value.  This was always a good idea, but now it is enforced with an 
  informative error message.
* stat_contour bump up default number of contours
* stat_density2d: make number of grid points used for density estimation 
  user controllable (implements #9)
* geom_bin now allows you to set whether bins used intervals of the form 
  (a, b] or [a, b) with the "right" parameter (implements #20)
* geom_path: linejoin, lineend and linemitre are now user controllable 
  (implements #24)
* scales: all scales check that breaks are supplied if labels are, and 
  that breaks and labels are the same length (implements #40)
* scales: if breaks are a named vector, the names will be used as labels
  (thanks to suggestion by David Kahle)
* scale_colour_gradient, scale_colour_gradient2 & scale_colour_gradientn now
  have formatter argument to match scale_continuous

Bug fixes

* coord_cartesian now correctly sets limits when one or both of the position
  scales are non-linear.  (fixes #17)
* coord_equal: now works with non-linear scales (fixes #13)
* coord_trans now respects scale expand parameter (expansion occurs after 
  transformation) (fixes #14)
* facet_wrap now sets aspect ratio correctly
* facet_wrap now maintains original order of data
* geom_hline and geom_vline now work with coord_flip (fixes #30)
* scale_shape_discrete, scale_size_continuous, scale_alpha and
  scale_linetype_discrete added to scales to match naming convention of all
  other scales (fixes #47)
* legends now correctly calculate label widths (fixes #38)
* legends will only merge if both the title and all labels are the same.
  (fixes #16)
* legends: fix for bug #19: Legend with three constraints doesn't work 
* stat_contour & stat_density2d: fix grouping bugs (issue #7)
* xlim, ylim: fix bug when setting limits of discrete scales