@@ -52,6 +52,8 @@ Bug fixes
 * coord_equal: now works with non-linear scales (fixes #13)
 * coord_trans now respects scale expand parameter (expansion occurs after 
   transformation) (fixes #14)
+* facet_grid with scales = "free" and space = "free" now calculates space 
+  correctly if the range of the scale is < 1 (fixes #1)
 * facet_wrap now sets aspect ratio correctly
 * facet_wrap now maintains original order of data
 * geom_hline and geom_vline now work with coord_flip (fixes #30)
